--- a/Happy_birthday!.html
+++ b/Happy_birthday!.html
@@ -7,9 +7,9 @@
 var imgAry = new Array();
 
 
-imgAry.push("img/Happy_birthday_1.jpg");
-imgAry.push("img/Happy_birthday_2.jpg");
-imgAry.push("img/Happy_birthday_3.jpg");
+imgAry.push("Happy_birthday_1.jpg");
+imgAry.push("Happy_birthday_2.jpg");
+imgAry.push("Happy_birthday_3.jpg");
 
 var cur = 0;
 
@@ -41,9 +41,9 @@ function setImg()
 
     <img id='rotate' src="img\giphy.gif">
     <div style='position: absolute; left: 900px; top: 680px;'>
-        <img id='img0' src="img\Happy_birthday_1 - 복사본.jpg" onmouseover='fncChgImg(this,0);'>
-        <img id='img1' src="img\Happy_birthday_2 - 복사본.jpg" onmouseover='fncChgImg(this,1);'>
-        <img id='img2' src="img\Happy_birthday_3 - 복사본.jpg" onmouseover='fncChgImg(this,2);'>
+        <img id='img0' src="Happy_birthday_1 - 복사본.jpg" onmouseover='fncChgImg(this,0);'>
+        <img id='img1' src="Happy_birthday_2 - 복사본.jpg" onmouseover='fncChgImg(this,1);'>
+        <img id='img2' src="Happy_birthday_3 - 복사본.jpg" onmouseover='fncChgImg(this,2);'>
      </div>
      <h1> If you overlay the mouse on the picture, the picture will be enlarged. </h1>
      <h2> 18114769 HyunGiHong </h2>
